# betcrm

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  FLOWS_STRATEGY.md  Makefile  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.postal.yml  docker-compose.yml
api/: .dockerignore  Dockerfile  conftest.py  manage.py  pyproject.toml
api/apps/analytics/: urls.py  views.py
api/apps/compliance/: admin.py  models.py  tasks.py  urls.py  views.py
api/apps/compliance/migrations/: 0001_initial.py
api/apps/core/: models.py  urls.py  utils.py  views.py
api/apps/core/migrations/: 0001_initial.py
api/apps/events/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/apps/events/migrations/: 0001_initial.py  0002_seed_event_types.py  0003_update_game_started_schema.py  0006_alter_event_workspace.py  (+2 more)
api/apps/flows/: admin.py  engine.py  models.py  tasks.py  urls.py  views.py
api/apps/messaging/: admin.py  models.py  services.py  tasks.py  tasks_scheduled.py  tracking.py  urls.py  views.py
api/apps/profiles/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/apps/segments/: admin.py  apps.py  engine.py  models.py  urls.py  views.py
api/apps/templates/: admin.py  email_generator.py  models.py  services.py  urls.py  views.py
api/apps/workspaces/: admin.py  config.py  models.py  permissions.py  scoping.py  serializers.py  urls.py  views.py
api/betcrm/: celery.py  celery_schedules.py  urls.py  wsgi.py
api/betcrm/settings/: base.py  dev.py  prod.py
api/templates_html/: bonus_activated.html  bonus_expiring.html  cashback_paid.html  copa_crosssell_brasil_marrocos.html  copa_downsell_brasil_marrocos.html  copa_freebet_brasil_marrocos.html  copa_reativacao_brasil_marrocos.html  deposit_abandoned.html  deposit_failed.html  deposit_thanks.html  welcome_ftd.html  withdrawal_completed.html  withdrawal_requested.html
(+148 files in other folders)
